{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 12,
  "lineage": "649fd18a-a1e5-6a22-4c55-12f5162cf884",
  "resources": [
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d65504617e273b40",
            "domain": "vpc",
            "id": "eipalloc-0d65504617e273b40",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-217-169-227.compute-1.amazonaws.com",
            "public_ip": "44.217.169.227",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529205770053:internet-gateway/igw-0347531bf47ffed63",
            "id": "igw-0347531bf47ffed63",
            "owner_id": "529205770053",
            "tags": {
              "Name": "Wordpress_project-igw"
            },
            "tags_all": {
              "Name": "Wordpress_project-igw"
            },
            "vpc_id": "vpc-079485951fabd0cd5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d65504617e273b40",
            "association_id": "eipassoc-02c4c99654b517957",
            "connectivity_type": "public",
            "id": "nat-0338cc04ccac9b7bf",
            "network_interface_id": "eni-01944d12c3a2f49bf",
            "private_ip": "10.0.3.214",
            "public_ip": "44.217.169.227",
            "subnet_id": "subnet-01e77098a20439e58",
            "tags": {
              "Name": "NGW"
            },
            "tags_all": {
              "Name": "NGW"
            }
          },
          "dependencies": [
            "module.VPC.aws_eip.ip",
            "module.VPC.aws_subnet.pri",
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529205770053:route-table/rtb-0c71ac4d7e57c2a35",
            "id": "rtb-0c71ac4d7e57c2a35",
            "owner_id": "529205770053",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0347531bf47ffed63",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "custom"
            },
            "tags_all": {
              "Name": "custom"
            },
            "timeouts": null,
            "vpc_id": "vpc-079485951fabd0cd5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529205770053:route-table/rtb-0b0d97daa29faeea1",
            "id": "rtb-0b0d97daa29faeea1",
            "owner_id": "529205770053",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0338cc04ccac9b7bf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "timeouts": null,
            "vpc_id": "vpc-079485951fabd0cd5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_eip.ip",
            "module.VPC.aws_nat_gateway.ngw",
            "module.VPC.aws_subnet.pri",
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fe9f28e0e6f75b0",
            "route_table_id": "rtb-0c71ac4d7e57c2a35",
            "subnet_id": "subnet-0d6b4295e286ec700"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route_table.rt1",
            "module.VPC.aws_subnet.pub",
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9aeed1be50fcce8",
            "route_table_id": "rtb-0b0d97daa29faeea1",
            "subnet_id": "subnet-01e77098a20439e58"
          },
          "dependencies": [
            "module.VPC.aws_eip.ip",
            "module.VPC.aws_nat_gateway.ngw",
            "module.VPC.aws_route_table.rt2",
            "module.VPC.aws_subnet.pri",
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529205770053:security-group/sg-026677e2f251e7f20",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026677e2f251e7f20",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "first-SG",
            "name_prefix": "",
            "owner_id": "529205770053",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "first-SG"
            },
            "tags_all": {
              "Name": "first-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-079485951fabd0cd5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529205770053:subnet/subnet-01e77098a20439e58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e77098a20439e58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529205770053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-079485951fabd0cd5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529205770053:subnet/subnet-0d6b4295e286ec700",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6b4295e286ec700",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529205770053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-079485951fabd0cd5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:529205770053:vpc/vpc-079485951fabd0cd5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05e66224af20688db",
            "default_route_table_id": "rtb-08d5f045b35388e20",
            "default_security_group_id": "sg-0fd2f40786ac0b8d7",
            "dhcp_options_id": "dopt-0e183b3271928a95e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-079485951fabd0cd5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d5f045b35388e20",
            "owner_id": "529205770053",
            "tags": {
              "Name": "Wordpress_project-vpc"
            },
            "tags_all": {
              "Name": "Wordpress_project-vpc"
            }
          }
        }
      ]
    }
  ]
}